plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.12'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.springboot.project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'jakarta.servlet:jakarta.servlet-api'
	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
	implementation 'org.glassfish:jakarta.el:4.0.2'
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
	implementation 'com.ibm.icu:icu4j:74.2'
	//채팅을 위한 웹소켓
	implementation 'org.springframework.boot:spring-boot-starter-websocket' 
	
}

tasks.named('test') {
	useJUnitPlatform()
}

eclipse.wtp.facet {
	facet name: 'jst.web', version: '5.0'
}
